# -Py2APK

./: README.md  pyproject.toml
py2apk/: __init__.py  analyzer.py  builder.py  cli.py  config.py  signing.py
py2apk/android_project/app/: build.gradle
py2apk/android_project/app/src/main/: AndroidManifest.xml
py2apk/android_project/app/src/main/java/com/example/py2apk/: AIModelRunner.java  AIService.java  APIKeyManager.java  MainActivity.java  PythonBridge.java
py2apk/android_project/app/src/main/python/: ai_model.py  api_client.py
py2apk/gui/: main_window.py
py2apk/py2apk/: cli.py
py2apk/tests/: test_android.py
py2apk/utils/: ai_processing.py  key_store.py  manifest.py  system_check.py
