[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py2apk"
version = "0.1.0"
description = "Python to Android APK converter"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "packaging>=23.0",
    "pyyaml>=6.0"
]

[project.scripts]
py2apk = "py2apk.cli:main"
